GNOME Bugzilla – Bug 678406
[PATCH] fix mem leaks
Last modified: 2012-06-24 04:26:28 UTC
Created attachment 216748 [details] [review] st-widget: fix GList leak .
Created attachment 216749 [details] [review] pokit-agent: fix memory leak
Review of attachment 216748 [details] [review]: This should really be using the linked list children iterator API instead. See the rest of the file for details.
Review of attachment 216749 [details] [review]: Sure.
Review of attachment 216749 [details] [review]: er, Sure.
Created attachment 216755 [details] [review] st-widget: fix GList leak
Review of attachment 216755 [details] [review]: Good catch. Should probably add something to the body of the commit message as it isn't really obvious why this is a leak (i.e that clutter_actor_get_children returns a newly allocated list and we where not freeing it.
Created attachment 217061 [details] [review] st-widget: fix GList leak updated commit message
Review of attachment 217061 [details] [review]: Looks good.
Attachment 216749 [details] pushed as 4e4092f - pokit-agent: fix memory leak Attachment 217061 [details] pushed as 556d5d1 - st-widget: fix GList leak